[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/PolyHavenImport/asset.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Asset" type="HBoxContainer"]
margin_right = 512.0
margin_bottom = 81.0
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Image" type="TextureRect" parent="."]
margin_right = 144.0
margin_bottom = 81.0
rect_min_size = Vector2( 144, 81 )
size_flags_vertical = 2
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Padding" type="MarginContainer" parent="."]
margin_left = 148.0
margin_right = 433.0
margin_bottom = 81.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_left = 8

[node name="Content" type="VBoxContainer" parent="Padding"]
margin_left = 8.0
margin_right = 285.0
margin_bottom = 81.0
size_flags_horizontal = 3

[node name="Name" type="RichTextLabel" parent="Padding/Content"]
margin_right = 277.0
margin_bottom = 15.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
bbcode_enabled = true
fit_content_height = true

[node name="Publisher" type="Label" parent="Padding/Content"]
modulate = Color( 0.752941, 0.752941, 0.752941, 1 )
margin_top = 19.0
margin_right = 277.0
margin_bottom = 33.0

[node name="ButtonContainer" type="VBoxContainer" parent="."]
margin_left = 437.0
margin_right = 512.0
margin_bottom = 81.0
custom_constants/separation = 2

[node name="DownloadButton" type="Button" parent="ButtonContainer"]
margin_right = 75.0
margin_bottom = 20.0
size_flags_vertical = 4
text = "Download"

[node name="RemoveButton" type="Button" parent="ButtonContainer"]
margin_top = 22.0
margin_right = 75.0
margin_bottom = 42.0
size_flags_vertical = 4
text = "Remove"

[node name="InstallButton" type="Button" parent="ButtonContainer"]
margin_top = 44.0
margin_right = 75.0
margin_bottom = 64.0
size_flags_vertical = 4
text = "Install"

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 239.0
margin_right = 595.0
margin_bottom = 130.0
window_title = "Open a Directory"
resizable = true
mode = 2
access = 2
current_dir = "/Dev/github/godotassets/plugin/PolyHavenImport"
current_path = "/Dev/github/godotassets/plugin/PolyHavenImport/"
[connection signal="meta_clicked" from="Padding/Content/Name" to="." method="_on_Name_meta_clicked"]
[connection signal="pressed" from="ButtonContainer/DownloadButton" to="." method="_on_DownloadButton_pressed"]
[connection signal="pressed" from="ButtonContainer/RemoveButton" to="." method="_on_RemoveButton_pressed"]
[connection signal="pressed" from="ButtonContainer/InstallButton" to="." method="_on_InstallButton_pressed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
